Made small changes to figure sponsor percentages and fix find project page spacing

--- a/app/assets/stylesheets/default/pages.css.scss
+++ b/app/assets/stylesheets/default/pages.css.scss
@@ -832,10 +832,6 @@ h5.time-left {
 	margin-right:20px;
 }
 
-.project:nth-child(odd) {
-	margin-right:0 !important;
-}
-
 .redactor_box {
   height:350px;
   max-width:570px;
